# tirtle

./: .gitignore  .gitmodules  CMakeLists.txt  FindOpenCV.cmake  README.md
ObjectTrack/: object_track.cpp
client/: CMakeLists.txt
client/include/tirtle/: logging.h  path.h  rpc.h  stdio_stream.h  tirtle.h  tirtle_client.h  tracker.h
client/src/: stdio_stream.cpp  tirtle.cpp  tirtle_client.cpp  tracker.cpp
client/test/: test_e2e.cpp  test_tirtle.cpp  test_tirtle_client.cpp
cmake/Modules/: FindOpenCV.cmake
common/include/tirtle/: move.h  path.h  rpc.h  stream.h
common/src/: path.cpp  rpc.cpp  stream.cpp
markers/: markers.odt
server/: CMakeLists.txt  main.cpp  motor_control.c  motor_control.cpp  motor_control.h  move_tirtle.c  path.h  rpc.h  server.ino
server/include/tirtle/: bluetooth.h  motor_control.h  robot.h  rpc_parser.h  rpc_server.h  serial.h
server/src/: bluetooth.cpp  motor_control.c  robot.cpp  serial.cpp  server.cpp
server/test/: echo.cpp
