cmake_minimum_required(VERSION 3.0)
set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_SOURCE_DIR}/cmake/Modules/")
set(CMAKE_CXX_STANDARD 11)
project( Tirtle )
find_package( OpenCV REQUIRED )
add_executable( Tirtle ObjectTrack/object_track.cpp )
set(OpenCV_LIB_PATH /usr/local/lib/ )
target_link_libraries( Tirtle ${OpenCV_LIB_PATH}libopencv_aruco.so.3.1.0 ${OpenCV_LIB_PATH}libopencv_core.so.3.1.0 ${OpenCV_LIB_PATH}libopencv_highgui.so.3.1.0 ${OpenCV_LIB_PATH}libopencv_imgproc.so.3.1.0 ${OpenCV_LIB_PATH}libopencv_imgcodecs.so.3.1.0)
